Created a link to the 'Shared Files' page from the homepage

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,7 @@
 
     <div class="container">
         <h2>Welcome to PcDrop</h2>
+        <a href="/shared_files">Paylaşılan dosyaları görüntüle</a>
         <p><strong>Bağlantı Adresi (Aynı Ağdaki Cihazlar için):</strong> <code>http://{{ local_ip }}:8000</code></p>
         <form id="uploadForm" action="/upload" method="post" enctype="multipart/form-data">
             <input type="file" name="files" multiple>
